--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'navbar' %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render 'footer' %>
   </body>
 </html>
