--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,24 @@
-ul {
+.nav-ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: #dddddd;
+  background-color: black;
+  text-align: center;
 }
 
-li {
-  display: inline;
+.nav-li {
+  display: table;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin-bottom: 32px;
+}
+
+.nav-element {
+  text-decoration: none;
+  color: white;
 }
