added images for the castles

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,5 +11,13 @@ body {
   font-size: 20px;
 }
 
-.container {
+.banner-image {
+  // border-style: solid;
+  // border-width: 16px;
+  // box-shadow: 6px 5px 5px grey;
+}
+
+.banner-image img {
+  height: 100%;
+  width: 100%;
 }
