--- a/app/views/castles/index.html.erb
+++ b/app/views/castles/index.html.erb
@@ -1,9 +1,5 @@
-<h1>Homepage</h1>
+<div class="banner-image">
+  <%= image_tag("frontpage-cover.jpg") %>
+</div>
 
-<%= link_to 'Burg Hohenrechberg', hohenrechberg_path %>
-<br><br>
-<%= link_to 'Burgruine Hohenstaufen', hohenstaufen_path %>
-<br><br>
-<%= link_to 'Bergruine Rosenstein', rosenstein_path %>
-<br><br>
-<%= link_to 'Bergruine Reußenstein', reussenstein_path %>
+<br>
