--- a/app/views/castles/index.html.erb
+++ b/app/views/castles/index.html.erb
@@ -3,3 +3,31 @@
 </div>
 
 <br>
+
+<div class="frontpage-header">
+<h3>Entdecke historische Burgen und Burgruinen rund um Göppingen</h3>
+</div>
+
+<div class="cards-container">
+  <div class="card" style="width: 24rem;">
+    <%= image_tag("hohenrechberg_1.jpg", :class => "card-size") %>
+    <p>test</p>
+  </div>
+
+  <div class="card" style="width: 24rem;">
+    <%= image_tag("hohenstaufen_4.jpg", :class => "card-size") %>
+    <p>test</p>
+  </div>
+
+  <div class="card" style="width: 24rem;">
+    <%= image_tag("rosenstein_1.png", :class => "card-size") %>
+    <p>test</p>
+  </div>
+
+  <div class="card" style="width: 24rem;">
+    <%= image_tag("reussenstein_2.jpg", :class => "card-size") %>
+    <p>test</p>
+  </div>
+</div>
+
+<br>
