--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,3 +15,11 @@
   min-height: 350px;
   max-height: 350px;
 }
+
+.card-text {
+  padding: 16px 16px 0px 16px;
+
+  h4 {
+    font-weight: bold;
+  }
+}
