--- a/app/views/castles/index.html.erb
+++ b/app/views/castles/index.html.erb
@@ -11,22 +11,34 @@
 <div class="cards-container">
   <div class="card" style="width: 24rem;">
     <%= image_tag("hohenrechberg_1.jpg", :class => "card-size") %>
-    <p>test</p>
+    <div class="card-text">
+      <h4>Burg Hohenrechberg</h4>
+      <p>Die Burg Hohenrechberg, auch „Hohen-Rechberg“ geschrieben, ist die Ruine einer mittelalterlichen Spornburg südlich von Schwäbisch Gmünd, in der Nähe des Stadtteils Rechberg im Ostalbkreis.</p>
+    </div>
   </div>
 
   <div class="card" style="width: 24rem;">
     <%= image_tag("hohenstaufen_4.jpg", :class => "card-size") %>
-    <p>test</p>
+    <div class="card-text">
+    <h4>Ruine Hohenstaufen</h4>
+      <p>Die Burg Hohenstaufen ist die Ruine einer mittelalterlichen Gipfelburg oberhalb des Ortes Hohenstaufen, eines Stadtteils von Göppingen. Sie liegt auf dem Gipfel des Hohenstaufen in 684 m ü. NN Höhe.</p>
+    </div>
   </div>
 
   <div class="card" style="width: 24rem;">
     <%= image_tag("rosenstein_1.png", :class => "card-size") %>
-    <p>test</p>
+    <div class="card-text">
+    <h4>Ruine Rosentein</h4>
+      <p>Die Burg Rosenstein ist die Ruine einer Höhenburg rund 1500 Meter östlich von der Stadt Heubach im Ostalbkreis.</p>
+    </div>
   </div>
 
   <div class="card" style="width: 24rem;">
     <%= image_tag("reussenstein_2.jpg", :class => "card-size") %>
-    <p>test</p>
+    <div class="card-text">
+      <h4>Ruine Reußenstein</h4>
+      <p>Die Burg Reußenstein ist die Ruine einer Felsenburg oberhalb von Neidlingen exakt auf der Grenze des Landkreises Esslingen und Göppingen.</p>
+    </div>
   </div>
 </div>
 
