added text and pictures and basic content structure + sytling to hohenrechberg show page

--- a/app/views/castles/hohenrechberg.html.erb
+++ b/app/views/castles/hohenrechberg.html.erb
@@ -1,1 +1,36 @@
-<h1>Burg Hohenrechberg</h1>
+<div class="show-header">
+  <h1>Burg Hohenrechberg</h1>
+</div>
+
+<div class="show-container">
+  <div class="pic-one">
+    <%= image_tag("hohenrechberg_1.jpg") %>
+  </div>
+
+  <div class="text-one">
+    <h4>Erbauung im 13. Jahrhundert</h4>
+    <p>Ein Ulrich von Rechberg wurde erstmals 1179 genannt. Er war vermutlich der Erbauer der Burg, die zwischen 1200 und 1250 entstanden ist. Zum ersten Mal erwähnt wurde sie 1355. Die als staufische Dienstmannenburg erbaute Burg Hohenrechberg war Stammsitz der späteren Grafen von Rechberg. Sie bildete den historischen und den administrativen Mittelpunkt ihres Herrschaftsgebietes.</p>
+  </div>
+
+  <div class="text-two">
+    <h4>Drohende Plünderungen</h4>
+    <p>1448 bis 1450 plünderten Kriegsleute der Reichsstädte Schwäbisch Gmünd und Schwäbisch Hall die Umgebung der Burg, wagten diese jedoch nicht anzugreifen. Im Bauernkrieg 1525 wurde der Hohenrechberg von den plündernden Bauern verschont. Allerdings konnten die Burgbewohner nicht verhindern, dass die Klöster Lorch und Adelberg sowie die nahegelegene Burg Hohenstaufen niedergebrannt wurden. 1546 zog der Schmalkaldische Bund vor der Burg auf, sie blieb aber unversehrt. Dagegen wurde Schwäbisch Gmünd eingenommen.</p>
+  </div>
+
+  <div class="pic-two">
+    <%= image_tag("hohenrechberg_2.jpg", :class => "card-size") %>
+  </div>
+
+  <div class="pic-three">
+    <%= image_tag("hohenrechberg_3.jpg", :class => "card-size") %>
+  </div>
+
+  <div class="text-three">
+    <h4>Die Rechberg Stiftung Hans Bader</h4>
+    <p>Bis zum Jahr 1986 befand sich die Burg im Eigentum des Adelsgeschlechts. Damals wurde sie an den Göppinger Unternehmer Hans Bader verkauft. Er verstarb im April 2006 und es war sein Wunsch, dass die „Burgruine Rechberg“ in eine Stiftung übergeht und sich weiterhin großer Beliebtheit bei Jung und Alt erfreut. Die Rechberg Stiftung Hans Bader wird seither von Familienangehörigen in ehrenamtlich-leidenschaftlicher Arbeit getragen.</p>
+  </div>
+
+  <div class="pic-four">
+    <%= image_tag("hohenrechberg_4.jpg") %>
+  </div>
+</div>
