text and styling improvements to hohenrechberg show page

--- a/app/views/castles/hohenrechberg.html.erb
+++ b/app/views/castles/hohenrechberg.html.erb
@@ -3,9 +3,7 @@
 </div>
 
 <div class="show-container">
-  <div class="pic-one">
-    <%= image_tag("hohenrechberg_1.jpg") %>
-  </div>
+    <%= link_to(image_tag("hohenrechberg_5.jpg", :class => "pic-one"), "/assets/hohenrechberg_5-d70242e5050d43975581488be19ca52996828ab6c0e5b91ad1a995620775948d.jpg") %>
 
   <div class="text-one">
     <h4>Erbauung im 13. Jahrhundert</h4>
@@ -15,22 +13,20 @@
   <div class="text-two">
     <h4>Drohende Plünderungen</h4>
     <p>1448 bis 1450 plünderten Kriegsleute der Reichsstädte Schwäbisch Gmünd und Schwäbisch Hall die Umgebung der Burg, wagten diese jedoch nicht anzugreifen. Im Bauernkrieg 1525 wurde der Hohenrechberg von den plündernden Bauern verschont. Allerdings konnten die Burgbewohner nicht verhindern, dass die Klöster Lorch und Adelberg sowie die nahegelegene Burg Hohenstaufen niedergebrannt wurden. 1546 zog der Schmalkaldische Bund vor der Burg auf, sie blieb aber unversehrt. Dagegen wurde Schwäbisch Gmünd eingenommen.</p>
-  </div>
-
-  <div class="pic-two">
-    <%= image_tag("hohenrechberg_2.jpg", :class => "card-size") %>
-  </div>
-
-  <div class="pic-three">
-    <%= image_tag("hohenrechberg_3.jpg", :class => "card-size") %>
+    <br>
   </div>
 
   <div class="text-three">
-    <h4>Die Rechberg Stiftung Hans Bader</h4>
-    <p>Bis zum Jahr 1986 befand sich die Burg im Eigentum des Adelsgeschlechts. Damals wurde sie an den Göppinger Unternehmer Hans Bader verkauft. Er verstarb im April 2006 und es war sein Wunsch, dass die „Burgruine Rechberg“ in eine Stiftung übergeht und sich weiterhin großer Beliebtheit bei Jung und Alt erfreut. Die Rechberg Stiftung Hans Bader wird seither von Familienangehörigen in ehrenamtlich-leidenschaftlicher Arbeit getragen.</p>
+    <h4>Besetzung durch die Franzosen</h4>
+    <p>Die Burg wurde mehrmals umgebaut und erweitert. Bis 1585 regierte die Herrschaft direkt von ihrer Stammburg aus. Sowohl 1648 im Dreißigjährigen Krieg wie auch 1796 zur Zeit der Französischen Revolutionskriege wurde die Burg zwar von den Franzosen besetzt, aber nie zerstört. 1865 wurde die Burg durch ein von Blitzschlag ausgelöstes Feuer zur Ruine. Die Ruine ist seit 1977 eine herausragende Sehenswürdigkeit an der Straße der Staufer.</p>
   </div>
 
-  <div class="pic-four">
-    <%= image_tag("hohenrechberg_4.jpg") %>
+    <%= image_tag("hohenrechberg_2.jpg", :class => "pic-two") %>
+
+    <%= image_tag("hohenrechberg_3.jpg", :class => "pic-three") %>
+
+  <div class="text-four">
+    <h4>Die Rechberg Stiftung Hans Bader</h4>
+    <p>Bis zum Jahr 1986 befand sich die Burg im Eigentum des Adelsgeschlechts. Damals wurde sie an den Göppinger Unternehmer Hans Bader verkauft. Er verstarb im April 2006 und es war sein Wunsch, dass die „Burgruine Rechberg“ in eine Stiftung übergeht und sich weiterhin großer Beliebtheit bei Jung und Alt erfreut. Die Rechberg Stiftung Hans Bader wird seither von Familienangehörigen in ehrenamtlich-leidenschaftlicher Arbeit getragen.</p>
   </div>
 </div>
