--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,10 +1,15 @@
 .show-header {
-  margin: 30px 0;
+  margin: 40px 0;
+
+  h1 {
+    font-weight: bold;
+  }
 }
 
 .show-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   p {
     font-size: 22px;
@@ -12,8 +17,8 @@
 }
 
 .text-one {
-  max-width: 48%;
-  margin-left: 30px;
+  flex: 0 0 55;
+  max-width: 55%;
 
   h4 {
     font-size: 26px;
@@ -22,8 +27,7 @@
 }
 
 .text-two {
-  width: 100%;
-  margin-top: 24px;
+  margin-top: 40px;
 
   h4 {
     font-size: 26px;
@@ -32,9 +36,19 @@
 }
 
 .text-three {
-  max-width: 48%;
-  margin-right: 30px;
-  margin-top: 24px;
+  flex: 0 0 50%;
+  max-width: 50%;
+
+  h4 {
+    font-size: 26px;
+    color: #deb887;
+  }
+}
+
+.text-four {
+  flex: 0 0 50;
+  max-width: 50%;
+  margin-top: 40px;
 
   h4 {
     font-size: 26px;
@@ -43,36 +57,23 @@
 }
 
 .pic-one {
-  max-width: 48%;
-
-  img {
-    max-width: 100%;
-  }
+  flex: 0 0 45%;
+  max-width: 540px;
+  height: auto;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .pic-two {
-  max-width: 50%;
-
-  img {
-    max-width: 100%;
-  }
+  flex: 0 0 45%;
+  max-width: 600px;
+  height: auto;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .pic-three {
-  max-width: 50%;
-  margin-left: 30px;
-  margin-bottom: 24px;
-
-  img {
-    max-width: 100%;
-  }
-}
-
-.pic-four {
-  max-width: 48%;
-  margin-top: 24px;
-
-  img {
-    max-width: 100%;
-  }
+  flex: 0 0 45%;
+  max-width: 600px;
+  height: auto;
+  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
+  margin-top: 40px;
 }
