minor content and styling changes to hohenrechberg show

--- a/app/views/castles/hohenrechberg.html.erb
+++ b/app/views/castles/hohenrechberg.html.erb
@@ -7,7 +7,7 @@
 
   <div class="text-one">
     <h4>Erbauung im 13. Jahrhundert</h4>
-    <p>Ein Ulrich von Rechberg wurde erstmals 1179 genannt. Er war vermutlich der Erbauer der Burg, die zwischen 1200 und 1250 entstanden ist. Zum ersten Mal erwähnt wurde sie 1355. Die als staufische Dienstmannenburg erbaute Burg Hohenrechberg war Stammsitz der späteren Grafen von Rechberg. Sie bildete den historischen und den administrativen Mittelpunkt ihres Herrschaftsgebietes.</p>
+    <p>Die Burg Hohenrechberg, auch „Hohen-Rechberg“ geschrieben, ist die Ruine einer mittelalterlichen Spornburg südlich von Schwäbisch Gmünd, in der Nähe des Stadtteils Rechberg im Ostalbkreis in Baden-Württemberg. <br><br> Ein Ulrich von Rechberg wurde erstmals 1179 genannt. Er war vermutlich der Erbauer der Burg, die zwischen 1200 und 1250 entstanden ist. Zum ersten Mal erwähnt wurde sie 1355. Die als staufische Dienstmannenburg erbaute Burg Hohenrechberg war Stammsitz der späteren Grafen von Rechberg. Sie bildete den historischen und den administrativen Mittelpunkt ihres Herrschaftsgebietes.</p>
   </div>
 
   <div class="text-two">
