added text and pictures for hohenstaufen view page and skeleton for reussenstein and rosenstein view pages

--- a/app/views/castles/hohenstaufen.html.erb
+++ b/app/views/castles/hohenstaufen.html.erb
@@ -1,1 +1,32 @@
-<h1>Burgruine Hohenstaufen</h1>
+<div class="show-header">
+  <h1>Burgruine Hohenstaufen</h1>
+</div>
+
+<div class="show-container">
+    <%= image_tag("hohenstaufen_1.jpg", :class => "pic-one") %>
+
+  <div class="text-one">
+    <h4>Leben innerhalb der Ringmauer</h4>
+    <p>Wie alle mittelalterlichen Burgen bestand die Stauferburg aus Wohn- und Wirtschaftsgebäuden, einer Kapelle, dem Bergfried und einer Toranlage, umschlossen von der Ringmauer. Das eher kleine Burgareal – es war etwa 135 Meter lang und 45 Meter breit – war wohl ursprünglich zum großen Teil mit Gebäuden überbaut. In der Anlage befanden sich der herrschaftliche Wohnbau – der Palas –, die Wohnräume der Burgmannen und die Unterkünfte der Wächter, Handwerker, Knechte und Mägde sowie Ställe für die Pferde.</p>
+  </div>
+
+  <div class="text-two">
+    <h4>Wehrhafter Stammsitz</h4>
+    <p>Die Stammburg der Staufer war ein Meisterstück der Burgenbaukunst. Nach mittelalterlichen Maßstäben entsprach sie modernsten wehrtechnischen Anforderungen und war ein sicherer Zufluchtsort. Im 12. Jahrhundert wurde die Burg umgebaut und erweitert. Mit dem Einzug einer Trennmauer wurde die Anlage in eine Vor- und in eine Hauptburg aufgeteilt. Dadurch entstand bei der kleineren, westlich gelegenen Hauptburg ein besonders gesicherter Innenbereich, der die Wehrhaftigkeit deutlich verbesserte.</p>
+    <br>
+  </div>
+
+  <div class="text-three">
+    <h4>Exponierter Herrschaftsmittelpunkt</h4>
+    <p>In einer zweiten Bauphase im 12. Jahrhundert wurde der Palas – das Wohngebäude der Herren – nach Osten erweitert, die Zisterne – der Wasserspeicher – brachte man im Keller unter. Die Ringmauer erhielt einen Zinnenkranz und wurde an der Westflanke durch einen Turm verstärkt. Dem Bergfried wurde ein Fachwerkgeschoss aufgesetzt, was ihn sehr markant machte. Außerdem wurde das Burgtor nach Osten verlegt und durch einen innerhalb der Ringmauer liegenden Torturm gesichert.</p>
+  </div>
+
+    <%= image_tag("hohenstaufen_2.jpg", :class => "pic-two") %>
+
+    <%= image_tag("hohenstaufen_3.jpg", :class => "pic-three") %>
+
+  <div class="text-four">
+    <h4>Beschwerlicher Alltag</h4>
+    <p>Den Alltag auf einer Burg darf man sich nicht komfortabel vorstellen. Da nur wenige Räume beheizbar waren, war es meistens kalt und feucht. Fenster im heutigen Sinn gab es nicht. Die Öffnungen wurden möglichst klein gehalten, damit wenig Wärme verloren ging. Fensterglas gab es auch noch nicht. Die Lichtspalte blieben im Sommer offen und wurden im Winter mit Holz oder Fellen verschlossen. Eine Beleuchtung durch Kienspäne oder Talglampen war seltener Luxus, sodass es in den Gebäuden fast immer dämmrig war.</p>
+  </div>
+</div>
