--- a/app/views/castles/reussenstein.html.erb
+++ b/app/views/castles/reussenstein.html.erb
@@ -1,1 +1,32 @@
-<h1>Bergruine Reußenstein</h1>
+<div class="show-header">
+  <h1>...</h1>
+</div>
+
+<div class="show-container">
+    <%= image_tag("...", :class => "pic-one") %>
+
+  <div class="text-one">
+    <h4>...</h4>
+    <p>...</p>
+  </div>
+
+  <div class="text-two">
+    <h4>...</h4>
+    <p>...</p>
+    <br>
+  </div>
+
+  <div class="text-three">
+    <h4>...</h4>
+    <p>...</p>
+  </div>
+
+    <%= image_tag("...", :class => "pic-two") %>
+
+    <%= image_tag("...", :class => "pic-three") %>
+
+  <div class="text-four">
+    <h4>...</h4>
+    <p>...</p>
+  </div>
+</div>
