added text and pictures for rosenstein view page

--- a/app/views/castles/hohenstaufen.html.erb
+++ b/app/views/castles/hohenstaufen.html.erb
@@ -1,5 +1,5 @@
 <div class="show-header">
-  <h1>Burgruine Hohenstaufen</h1>
+  <h1>BURGRUINE HOHENSTAUFEN</h1>
 </div>
 
 <div class="show-container">
