--- a/app/views/castles/rosenstein.html.erb
+++ b/app/views/castles/rosenstein.html.erb
@@ -1,32 +1,32 @@
 <div class="show-header">
-  <h1>...</h1>
+  <h1>BURGRUINE ROSENSTEIN</h1>
 </div>
 
 <div class="show-container">
-    <%= image_tag("...", :class => "pic-one") %>
+    <%= image_tag("rosenstein_1.png", :class => "pic-one") %>
 
   <div class="text-one">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Hainricus de Rosenstein</h4>
+    <p>In einer Urkunde des Klosters Kaisheim von 1234 wird neben anderen Personen auch ein „miles Hainricus de Hobach“ genannt. Vermutlich verließen diese Heubacher Ortsadligen Mitte des 13. Jahrhunderts den Ort, um auf dem Bergsporn oberhalb des Ortes eine Höhenburg zu errichten, was zu der damaligen Zeit einem üblichen Trend entsprach. 1282/83 wird in einer Schenkungsurkunde des Grafen Ludwig V. von Oettingen erstmals ein „Hainricus de Rosenstein“ genannt, der derselben Adelsfamilie zuzurechnen ist. Somit ist diese Urkunde die erste schriftliche Erwähnung der Burg. Die Burgherren standen erwiesenermaßen in Lehensabhängigkeit zu den Grafen von Öttingen.</p>
   </div>
 
   <div class="text-two">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Für kurze Zeit freie Reichsstadt</h4>
+    <p>In den frühen Quellen wird die Burg häufig in Zusammenhang mit der 1128 erstmals bekundeten benachbarten Lauterburg erwähnt. 1338 tauchte im Gefolge der Grafschaft als Inhaber der Burg Rosenstein Albert Haugke auf, ein Mitglied der Hacken von Wöllstein – ebenfalls Gefolgsleute der Öttinger. Spätestens 1360 wurden die Burg Rosenstein und das zu diesem Zeitpunkt erstmals als Stadt ausgewiesene Heubach an Württemberg verpfändet. Nach einer Niederlage 1360 vor Schorndorf musste Eberhard II. von Württemberg aber diese Pfandschaft an Kaiser Karl IV. abtreten. Heubach erlangte somit für kurze Zeit den Status einer freien Reichsstadt.</p>
     <br>
   </div>
 
   <div class="text-three">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Wechselnde Burgherren</h4>
+    <p>1377 jedoch wurden die Lauterburg, die Burg Rosenstein und die Städte Aalen und Heubach für 20.000 Gulden wieder an Württemberg zurück verpfändet. 1413 wurden die Herren von Wöllwarth von Graf Eberhard III. mit Heubach, dem Rosenstein und einigen anderen Orten in der Umgebung belehnt. 1430 wurde dieses Lehensverhältnis in einen Pfandschaftsvertrag umgewandelt. 1480 veräußerte Graf Eberhard der Jüngere Heubach und den Rosenstein für 1800 fl. an die Brüder Renwarth und Jörg V. von Wöllwarth unter dem Vorbehalt des Wiedererwerbs. Der Erbe Georg VII. verließ schließlich schon vor 1524 die Burg als Wohnsitz und baute in der Stadt ein „Adenlich Haus“, das heute noch existierende Schloss Heubach.</p>
   </div>
 
-    <%= image_tag("...", :class => "pic-two") %>
+    <%= image_tag("rosenstein_2.jpg", :class => "pic-two") %>
 
-    <%= image_tag("...", :class => "pic-three") %>
+    <%= image_tag("rosenstein_3.jpg", :class => "pic-three") %>
 
   <div class="text-four">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Rascher Verfall</h4>
+    <p>Die Burg verfiel in der Folgezeit rasch, die Mauern und Gebäudereste dienten den Einwohnern von Heubach als Steinbruch. In der Gmünder Pürschkarte von 1572 ist die Burg bereits als Ruine dargestellt. Lediglich die Westwand des Palas blieb bis in die heutige Zeit erhalten. <br><br> Zu Beginn des 19. Jahrhunderts fühlten sich vor dem Hintergrund der Romantik Dichter und Sprachforscher wie Ludwig Uhland und Gustav Schwab vom Rosenstein angezogen, Landschaftsmaler wie August Seyffer fertigten Skizzen von der Ruine an. Mit dem Bau der Remsbahn 1861 kamen zunehmend Ausflügler nach Heubach, die sich auch für den Rosenstein zu interessieren begannen.</p>
   </div>
 </div>
