added text and pictures for reussenstein view page

--- a/app/views/castles/reussenstein.html.erb
+++ b/app/views/castles/reussenstein.html.erb
@@ -1,32 +1,32 @@
 <div class="show-header">
-  <h1>...</h1>
+  <h1>BURGRUINE REUßENSTEIN</h1>
 </div>
 
 <div class="show-container">
-    <%= image_tag("...", :class => "pic-one") %>
+    <%= image_tag("reussenstein_1.jpg", :class => "pic-one") %>
 
   <div class="text-one">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Erbauung im 13. Jahrhundert</h4>
+    <p>Die Burg wurde gegen 1270 als Ministerialburg der Herrschaft Teck gebaut; sie kontrollierte bis in das Spätmittelalter einen Albaufstieg aus dem Neidlinger Tal. Ritter Diethoh von Kirchheim-Stein war seit etwa 1301 der erste Herr der Burg. Sein Sohn verkaufte sie an seine Vettern, Konrad und Heinrich Reuß. Von Konrad Reuß, der Augsburger Domherr war, erwarb Marquard von Randeck, der frühere Augsburger Bischof und damalige Patriarch von Aquileja im Jahr 1371 das Eigentum an der Burg. Marquard übertrug das Eigentum 1376 an seinen Großneffen Konrad von Randeck. Dieser hielt die Burg bis ins Jahr 1441, verpfändete sie aber weiter. Die Burg zählte rund zehn Pfandbesitzer.</p>
   </div>
 
   <div class="text-two">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Zuletzt bewohnt durch Ludwig Helferich von Reußenstein</h4>
+    <p>Während Marquard von Randeck die Burg 1376 noch mit dem ursprünglichen Namen „stayn“ bezeichnete, nannte sie Konrad von Randeck in einer Urkunde des Jahres 1383 dann „festin rüszenstain“. 1441 erwarben die Grafen von Helfenstein von Konrad von Randeck das Eigentum am Reußenstein. Der letzte Graf, der auf der Burg wohnte, war Ludwig Helferich von Reußenstein.</p>
     <br>
   </div>
 
   <div class="text-three">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Beginnender Verfall ab 1550</h4>
+    <p>Mit dem Aussterben der Helfensteiner ab 1550 blieb die Burg unbewohnt und begann zu zerfallen. 1752 wurde der Reußenstein Eigentum der bayerischen Hofkammer. 1806 wurde sie württembergische Staatsdomäne. 1835 schenkte der König von Württemberg die Burg seinem Adjutanten Oberst von Fleischmann. 1846 wurde bei der Ruine der angeblich vorletzte Luchs in Deutschland erlegt. Im März 1862 kaufte die Hofkammer (damals Hofdomänenkammer) die Burgruine und das dazugehörige große Gut von Generalmajor v. Fleischmann um 73.000 Gulden.</p>
   </div>
 
-    <%= image_tag("...", :class => "pic-two") %>
+    <%= image_tag("reussenstein_3.jpg", :class => "pic-two") %>
 
-    <%= image_tag("...", :class => "pic-three") %>
+    <%= image_tag("reussenstein_4.jpg", :class => "pic-three") %>
 
   <div class="text-four">
-    <h4>...</h4>
-    <p>...</p>
+    <h4>Sanierung der Burg</h4>
+    <p>Im Jahr 1928 richtete man eine Wasserleitung mit einem Pumpwerk ein. Im Zuge der Bodenreform wurden die Domänen Reußenstein und Ziegelhof 1950 enteignet. Am 5. Oktober 1964 wurde die Ruine an den Kreis Nürtingen verkauft. In den Jahren 1965/66 renovierten der Landkreis Nürtingen (heute Landkreis Esslingen) und der Schwäbische Albverein unter der Aufsicht des württembergischen Denkmalamtes den Reußenstein. 2012 wurde die Südwand saniert.</p>
   </div>
 </div>
