--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-  margin: 0 0 40px;
   background-color: #222222;
   color: white;
   font-family: "Benne", serif;
@@ -12,9 +11,11 @@ body {
 }
 
 .banner-image {
-  // border-style: solid;
-  // border-width: 16px;
-  // box-shadow: 6px 5px 5px grey;
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 4px;
+  box-shadow: 6px 5px 5px grey;
+  margin-bottom: 56px;
 }
 
 .banner-image img {
@@ -27,7 +28,7 @@ body {
 
   h3 {
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 32px;
     font-size: 36px;
   }
 
