--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -17,12 +17,14 @@
 }
 
 .text-one {
-  flex: 0 0 55;
+  flex: 0 0 55%;
   max-width: 55%;
+  margin-top: 8px;
 
   h4 {
     font-size: 26px;
-    color: #deb887;
+    font-weight: bold;
+    color: #b8860b;
   }
 }
 
@@ -31,17 +33,20 @@
 
   h4 {
     font-size: 26px;
-    color: #deb887;
+    font-weight: bold;
+    color: #b8860b;
   }
 }
 
 .text-three {
   flex: 0 0 50%;
   max-width: 50%;
+  margin-top: 24px;
 
   h4 {
     font-size: 26px;
-    color: #deb887;
+    font-weight: bold;
+    color: #b8860b;
   }
 }
 
@@ -52,7 +57,8 @@
 
   h4 {
     font-size: 26px;
-    color: #deb887;
+    font-weight: bold;
+    color: #b8860b;
   }
 }
 
@@ -60,20 +66,21 @@
   flex: 0 0 45%;
   max-width: 540px;
   height: auto;
-  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 6px 6px rgba(0, 0, 0, 0.3);
 }
 
 .pic-two {
   flex: 0 0 45%;
   max-width: 600px;
   height: auto;
-  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 6px 6px rgba(0, 0, 0, 0.3);
+  margin-top: 24px;
 }
 
 .pic-three {
   flex: 0 0 45%;
   max-width: 600px;
   height: auto;
-  box-shadow: 10px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 6px 6px rgba(0, 0, 0, 0.3);
   margin-top: 40px;
 }
