--- a/app/views/castles/index.html.erb
+++ b/app/views/castles/index.html.erb
@@ -28,7 +28,7 @@
     <%= image_tag("rosenstein_1.png", :class => "card-size") %>
     <div class="card-text">
     <%= link_to 'Ruine Rosenstein', rosenstein_path, class: "stretched-link" %>
-      <p>Die Burg Rosenstein ist die Ruine einer Höhenburg rund 1500 Meter östlich von der Stadt Heubach im Ostalbkreis.</p>
+      <p>Die Burg Rosenstein ist die Ruine einer Höhenburg rund 1500 Meter östlich von der Stadt Heubach. Die Ruine befindet sich in Spornlage auf rund 686 Meter über Normalnull.</p>
     </div>
   </div>
 
@@ -36,7 +36,7 @@
     <%= image_tag("reussenstein_2.jpg", :class => "card-size") %>
     <div class="card-text">
       <%= link_to 'Ruine Reußenstein', reussenstein_path, class: "stretched-link" %>
-      <p>Die Burg Reußenstein ist die Ruine einer Felsenburg oberhalb von Neidlingen exakt auf der Grenze des Landkreises Esslingen und Göppingen.</p>
+      <p>Die Burg Reußenstein ist die Ruine einer Felsenburg oberhalb von Neidlingen exakt auf der Grenze des Landkreises Esslingen und Göppingen in Baden-Württemberg.</p>
     </div>
   </div>
 </div>
