--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,8 @@
 .card {
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 3px;
+  border-color: white;
   background-color: #f5f5f5;
   color: black;
   flex-basis: 48%;
@@ -17,8 +21,9 @@
 }
 
 .card-size {
-  min-height: 350px;
-  max-height: 350px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 6px 6px 0 0;
 }
 
 .card-text {
