--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,11 @@
 .footer {
   width: 100%;
   height: 60px;
-  padding-top: 15px;
-  background-color: black;
+  padding-top: 18px;
+  background-color: #808080;
   color: white;
   text-align: center;
   margin-top: 40px;
+  font-weight: bold;
+  overflow: hidden;
 }
