--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-  background-color: #222222;
-  color: white;
+  background-color: #dcdcdc;
+  color: black;
   font-family: "Benne", serif;
   font-size: 20px;
 }
@@ -14,13 +14,16 @@ body {
   border-style: solid;
   border-radius: 10px;
   border-width: 4px;
+  border-color: white;
   box-shadow: 6px 5px 5px grey;
+  margin-top: 32px;
   margin-bottom: 56px;
 }
 
 .banner-image img {
   height: 100%;
   width: 100%;
+  border-radius: 6px;
 }
 
 .frontpage-text {
