added links to images to show a big image on click and small styling improvements

--- a/app/views/castles/hohenrechberg.html.erb
+++ b/app/views/castles/hohenrechberg.html.erb
@@ -20,9 +20,9 @@
     <p>Die Burg wurde mehrmals umgebaut und erweitert. Bis 1585 regierte die Herrschaft direkt von ihrer Stammburg aus. Sowohl 1648 im Dreißigjährigen Krieg wie auch 1796 zur Zeit der Französischen Revolutionskriege wurde die Burg zwar von den Franzosen besetzt, aber nie zerstört. 1865 wurde die Burg durch ein von Blitzschlag ausgelöstes Feuer zur Ruine. Die Ruine ist seit 1977 eine herausragende Sehenswürdigkeit an der Straße der Staufer.</p>
   </div>
 
-    <%= image_tag("hohenrechberg_2.jpg", :class => "pic-two") %>
+    <%= link_to(image_tag("hohenrechberg_2.jpg", :class => "pic-two"), "/assets/hohenrechberg_2-d45510bbc4ee8326cd26c879b87b9ee12b80884a70644cc362785a048837c2c6.jpg") %>
 
-    <%= image_tag("hohenrechberg_3.jpg", :class => "pic-three") %>
+    <%= link_to(image_tag("hohenrechberg_3.jpg", :class => "pic-three"), "/assets/hohenrechberg_3-9f35e6e31230b3ddea5400af870183d593a9bdbfdcc01b8838f0aff3820cf9e8.jpg") %>
 
   <div class="text-four">
     <h4>Die Rechberg Stiftung Hans Bader</h4>
