--- a/app/views/castles/reussenstein.html.erb
+++ b/app/views/castles/reussenstein.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="show-container">
-  <%= image_tag("reussenstein_1.jpg", :class => "pic-one") %>
+  <%= link_to(image_tag("reussenstein_1.jpg", :class => "pic-one"),"/assets/reussenstein_1-76986300cc6121be3acc4aed49bfddbe10c8340f3be341e234f69bc08cf1a6a3.jpg") %>
 
   <div class="text-one">
     <h4>Erbauung im 13. Jahrhundert</h4>
@@ -20,9 +20,9 @@
     <p>Mit dem Aussterben der Helfensteiner ab 1550 blieb die Burg unbewohnt und begann zu zerfallen. 1752 wurde der Reußenstein Eigentum der bayerischen Hofkammer. 1806 wurde sie württembergische Staatsdomäne. 1835 schenkte der König von Württemberg die Burg seinem Adjutanten Oberst von Fleischmann. 1846 wurde bei der Ruine der angeblich vorletzte Luchs in Deutschland erlegt. Im März 1862 kaufte die Hofkammer (damals Hofdomänenkammer) die Burgruine und das dazugehörige große Gut von Generalmajor v. Fleischmann um 73.000 Gulden.</p>
   </div>
 
-    <%= image_tag("reussenstein_3.jpg", :class => "pic-two") %>
+    <%= link_to(image_tag("reussenstein_3.jpg", :class => "pic-two"),"/assets/reussenstein_3-969d6d601c4c1d05b854a67a77708c0863be63793c21080b1cb2acb878540301.jpg") %>
 
-    <%= image_tag("reussenstein_4.jpg", :class => "pic-three") %>
+    <%= link_to(image_tag("reussenstein_4.jpg", :class => "pic-three"),"/assets/reussenstein_4-df364c1eb46434d104be8ac2c6aa9649abf961c31bafe590fde89edae264b667.jpg") %>
 
   <div class="text-four">
     <h4>Sanierung der Burg</h4>
