--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -30,6 +30,7 @@
 
 .text-two {
   margin-top: 40px;
+  margin-bottom: 20px;
 
   h4 {
     font-size: 26px;
@@ -41,7 +42,7 @@
 .text-three {
   flex: 0 0 50%;
   max-width: 50%;
-  margin-top: 24px;
+  margin-bottom: 30px;
 
   h4 {
     font-size: 26px;
@@ -53,7 +54,41 @@
 .text-four {
   flex: 0 0 50;
   max-width: 50%;
-  margin-top: 44px;
+  margin-top: 40px;
+
+  h4 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #b8860b;
+  }
+}
+
+.text-five {
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  h4 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #b8860b;
+  }
+}
+
+.text-six {
+  flex: 0 0 50%;
+  max-width: 50%;
+  margin-bottom: 30px;
+
+  h4 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #b8860b;
+  }
+}
+
+.text-seven {
+  flex: 0 0 50;
+  max-width: 50%;
 
   h4 {
     font-size: 26px;
@@ -74,7 +109,6 @@
   max-width: 600px;
   height: auto;
   box-shadow: 6px 6px rgba(0, 0, 0, 0.3);
-  margin-top: 24px;
 }
 
 .pic-three {
@@ -82,5 +116,4 @@
   max-width: 600px;
   height: auto;
   box-shadow: 6px 6px rgba(0, 0, 0, 0.3);
-  margin-top: 40px;
 }
