--- a/app/views/castles/rosenstein.html.erb
+++ b/app/views/castles/rosenstein.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="show-container">
-  <%= image_tag("rosenstein_1.png", :class => "pic-one") %>
+  <%= link_to(image_tag("rosenstein_1.png", :class => "pic-one"), "/assets/rosenstein_1-f1b532a43574c072aa006c7bd3fa594a202e6bc2e3ab8a32c9db90da8a9ac3ec.png") %>
 
   <div class="text-one">
     <h4>Hainricus de Rosenstein</h4>
@@ -20,9 +20,9 @@
     <p>1377 jedoch wurden die Lauterburg, die Burg Rosenstein und die Städte Aalen und Heubach für 20.000 Gulden wieder an Württemberg zurück verpfändet. 1413 wurden die Herren von Wöllwarth von Graf Eberhard III. mit Heubach, dem Rosenstein und einigen anderen Orten in der Umgebung belehnt. 1430 wurde dieses Lehensverhältnis in einen Pfandschaftsvertrag umgewandelt. 1480 veräußerte Graf Eberhard der Jüngere Heubach und den Rosenstein für 1800 fl. an die Brüder Renwarth und Jörg V. von Wöllwarth unter dem Vorbehalt des Wiedererwerbs. Der Erbe Georg VII. verließ schließlich schon vor 1524 die Burg als Wohnsitz und baute in der Stadt ein „Adenlich Haus“, das heute noch existierende Schloss Heubach.</p>
   </div>
 
-    <%= image_tag("rosenstein_2.jpg", :class => "pic-two") %>
+    <%= link_to(image_tag("rosenstein_2.jpg", :class => "pic-two"), "/assets/rosenstein_2-2040a37a29b3342ba49920114205b16f4273819fe0df4d759d653a2a82838299.jpg") %>
 
-    <%= image_tag("rosenstein_3.jpg", :class => "pic-three") %>
+    <%= link_to(image_tag("rosenstein_3.jpg", :class => "pic-three"), "/assets/rosenstein_3-7a20a6611f902dc9bf16891591a55eb1c703062532782876bf69580aa3338912.jpg") %>
 
   <div class="text-four">
     <h4>Rascher Verfall</h4>
